<resources>
    <string name="app_name">Yamba</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_status">Status</string>
    <string name="whats_up">What\'s Up?</string>
    <string name="post">Post</string>
    <string name="username_summary">What\'s your user name?</string>
    <string name="username">User Name</string>
    <string name="password_summary">How do you log in?</string>
    <string name="password">Password</string>
    <string name="defaultStudent">student</string>
</resources>
