<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username"
        android:defaultValue="@string/defaultStudent"/>
    <EditTextPreference
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password"
        android:inputType="textPassword" />

    <ListPreference
        android:key="interval"
        android:title="Refresh Interval"
        android:summary="How frequently should data refresh?"
        android:entries="@array/interval_names"
        android:entryValues="@array/interval_values"
        android:defaultValue="0"/>

</PreferenceScreen>